# butter

./: README.md  pyproject.toml
butter/: cli.py  config.py  models.py  runner.py  schema.py  supervisor.py  writer.py
resources/: supervisor.conf
tests/: test_butter.py
